--- a/defense/main.bib
+++ b/defense/main.bib
@@ -79,3 +79,22 @@
 	pages={467--474},
 	year={2005}
 }
+
+@inproceedings{devriendt2016improved,
+	title={Improved static symmetry breaking for SAT},
+	author={Devriendt, Jo and Bogaerts, Bart and Bruynooghe, Maurice and Denecker, Marc},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={104--122},
+	year={2016},
+	organization={Springer}
+}
+
+@article{aloul06,
+	author    = {{Fadi A.} Aloul and {Karem A.} Sakallah and {Igor L.} Markov},
+	title     = {Efficient Symmetry Breaking for Boolean Satisfiability},
+	journal   = {{IEEE} Trans. Computers},
+	volume    = {55},
+	number    = {5},
+	pages     = {549--558},
+	year      = {2006}
+}
