--- a/title.tex
+++ b/title.tex
@@ -37,7 +37,7 @@
   \textit{Rapporteurs :}  & \textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Lorraine\\
                           & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
   \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
-                          & \textsc{Emanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
+                          & \textsc{Emmanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
                           & \textsc{Bart Bogoerts}  & Assistant Professor, Vrije Universiteit Brussel\\
 \textit{Directeurs :}    & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
                           & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
